--- a/index.html
+++ b/index.html
@@ -15,21 +15,7 @@
     <button type="submit">Acceder</button>
   </form>
 </div>
-<script>
-  function verificarContrasena(event) {
-    event.preventDefault();
-    const contrasenaIngresada = document.getElementById('contrasena').value;
-
-    // Aquí verifica la contraseña ingresada con la contraseña correcta
-    const contrasenaCorrecta = 'pepe';
-
-    if (contrasenaIngresada === contrasenaCorrecta) {
-      window.location.href = 'calculadora.html'; // Redireccionar al contenido si la contraseña es correcta
-    } else {
-      alert('Contraseña incorrecta. Inténtalo de nuevo.'); // Mostrar un mensaje de error si la contraseña es incorrecta
-    }
-  }
-</script>
+<script src="main.js"></script>
 
 </body>
 </html>
