--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container">
-  <h1>Bienvenido al Portal</h1>
+  <h1>No se ni que estoy haciendo</h1>
   <form onsubmit="verificarContrasena(event)">
     <label for="contrasena">Contraseña:</label>
     <input type="password" id="contrasena" required>
